# hello_python

./: .gitignore  CMakeLists.txt
src/: Class.cpp  SmartPtr.cpp  SmartPtr2.cpp  Win.cpp  main.cpp
tests/: main.py  my_test_basic.py  requirements.txt  run_test.bat  test_basic.py
tests/basic/: __init__.py  deco.py  func.py  import_and_run.py
